--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ NUXT_INIT_ROOT_PASSWORD=EstaEsUnaConstrasena
 NUXT_INIT_ROOT_EMAIL=example@mail.com
 NUXT_DATABASE_URI=local
 NUXT_AUTH_SECRET=secret
+DATABASE_URL="/root/dev.db"
