--- a/package.json
+++ b/package.json
@@ -8,35 +8,42 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.3.0",
+    "@nuxt/content": "^2.6.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/i18n": "^8.0.0-beta.10",
     "@types/bcrypt": "^5.0.0",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "@vue/eslint-config-standard": "^8.0.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-anti-trojan-source": "^1.1.1",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-security-node": "^1.1.1",
-    "eslint-plugin-vue": "^9.8.0",
-    "nuxt": "3.0.0",
-    "sass": "^1.57.1",
-    "typescript": "^4.9.4",
+    "eslint-plugin-vue": "^9.12.0",
+    "nuxt": "3.4.3",
+    "nuxt-icon": "^0.4.0",
+    "prisma": "^4.14.0",
+    "sass": "^1.62.1",
+    "typescript": "^5.0.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.6.4"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.6",
-    "@sidebase/nuxt-auth": "^0.3.3",
+    "@pinia/nuxt": "^0.4.10",
+    "@prisma/client": "^4.14.0",
+    "@sidebase/nuxt-auth": "^0.5.0",
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
+    "dayjs": "^1.11.7",
     "http-status-codes": "^2.2.0",
-    "lowdb": "^5.0.5",
-    "nuxt-security": "^0.10.0",
-    "pinia": "^2.0.28",
+    "nuxt-security": "^0.13.0",
+    "pinia": "^2.0.36",
+    "sqlite3": "^5.1.6",
     "uuid": "^9.0.0",
-    "vue": "^3.2.45"
+    "vue": "^3.3.1",
+    "zod": "^3.21.4"
   }
 }
