--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,12 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-		"experimentalDecorators": true
-	}
+  	// https://nuxt.com/docs/guide/concepts/typescript
+  	"extends": "./.nuxt/tsconfig.json",
+  	"compilerOptions": {
+		"experimentalDecorators": true,
+		"skipLibCheck": true
+	},
+	"files.exclude": {
+		"**/node_modules": true
+	},
+	"exclude": ["node_modules"]
 }
