--- a/package.json
+++ b/package.json
@@ -8,42 +8,37 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.6.0",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/i18n": "^8.0.0-beta.10",
-    "@types/bcrypt": "^5.0.0",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
-    "@vue/eslint-config-standard": "^8.0.1",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-anti-trojan-source": "^1.1.1",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-security-node": "^1.1.1",
-    "eslint-plugin-vue": "^9.12.0",
-    "nuxt": "3.4.3",
-    "nuxt-icon": "^0.4.0",
-    "prisma": "^4.14.0",
-    "sass": "^1.62.1",
-    "typescript": "^5.0.4",
-    "vite-plugin-eslint": "^1.8.1",
-    "vue-tsc": "^1.6.4"
+    "@nuxt/content": "^2.12.1",
+    "@nuxt/eslint": "^0.3.8",
+    "@nuxtjs/i18n": "^8.3.0",
+    "@sidebase/nuxt-auth": "^0.7.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/uuid": "^9.0.8",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "nuxt": "3.11.2",
+    "nuxt-icon": "^0.6.10",
+    "prettier": "^3.2.5",
+    "prisma": "^5.12.1",
+    "sass": "^1.75.0",
+    "typescript": "^5.4.5",
+    "vite-plugin-eslint2": "^4.4.0",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.10",
-    "@prisma/client": "^4.14.0",
-    "@sidebase/nuxt-auth": "^0.5.0",
+    "@pinia/nuxt": "^0.5.1",
+    "@prisma/client": "^5.12.1",
     "ajv": "^8.12.0",
-    "bcrypt": "^5.1.0",
-    "dayjs": "^1.11.7",
-    "http-status-codes": "^2.2.0",
-    "nuxt-security": "^0.13.0",
-    "pinia": "^2.0.36",
-    "sqlite3": "^5.1.6",
-    "uuid": "^9.0.0",
-    "vue": "^3.3.1",
-    "zod": "^3.21.4"
+    "bcrypt": "^5.1.1",
+    "chokidar": "^3.6.0",
+    "dayjs": "^1.11.10",
+    "http-status-codes": "^2.3.0",
+    "nuxt-security": "^1.3.2",
+    "pinia": "^2.1.7",
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1",
+    "vue": "^3.4.23",
+    "zod": "^3.22.4"
   }
 }
